--- a/.gitignore
+++ b/.gitignore
@@ -31,11 +31,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
+.env
+.env.local
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# src/app/components/ui/
