--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.0.17",
     "class-variance-authority": "^0.7.1",
