refactor: Integrate Google Analytics from @next/third-parties instead
- Replaced local GoogleAnalytics component with the one from @next/third-parties.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deseo-app",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
