--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deseo-app",
-  "version": "0.8.0-beta.5-5",
+  "version": "0.8.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
